syntax = "proto3";

option go_package = './proto/generated';

package proto;

message SortTasksRequest{
    string sort_by = 1;
}